// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario 1 - Ends up with one fail 1- default state 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": false,
  "log": Array [],
  "pending": Array [],
  "show": false,
}
`;

exports[`Scenario 1 - Ends up with one fail 2- setAct - add files to queue. 4 items in "pending". 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": false,
  "log": Array [],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 1 - Ends up with one fail 3- startAct 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 1 - Ends up with one fail 4- okAct - 3 items in "pending", 1 item in "completed". 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
  ],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 1 - Ends up with one fail 5- okAct - 2 item in "pending", 2 items in "completed". 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 1 - Ends up with one fail 6- errorAct. 1 item in "pending", 2 items in "completed", 1 item in "failed".  1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "failed": Array [
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
  ],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
    Object {
      "msg": "/index.html could not upload",
      "type": "error",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 1 - Ends up with one fail 7- okAct. 0 item in "pending", 3 items in "completed", 1 item in "failed".  1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
  ],
  "failed": Array [
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
  ],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
    Object {
      "msg": "/index.html could not upload",
      "type": "error",
    },
    Object {
      "msg": "/style.css uploaded",
      "type": "success",
    },
  ],
  "pending": Array [],
  "show": true,
}
`;

exports[`Scenario 1 - Ends up with one fail 8- finishAct 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
  ],
  "failed": Array [
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
  ],
  "inProgress": false,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
    Object {
      "msg": "/index.html could not upload",
      "type": "error",
    },
    Object {
      "msg": "/style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "3 files uploaded, 1 failed  👀",
      "type": "info",
    },
  ],
  "pending": Array [],
  "show": true,
}
`;

exports[`Scenario 1 - Ends up with one fail 9- resetAct 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": false,
  "log": Array [],
  "pending": Array [],
  "show": false,
}
`;

exports[`Scenario 2 - All success 1- default state 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": false,
  "log": Array [],
  "pending": Array [],
  "show": false,
}
`;

exports[`Scenario 2 - All success 2- setAct - add files to queue. 4 items in "pending". 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": false,
  "log": Array [],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 2 - All success 3- startAct 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 2 - All success 4- okAct - 3 items in "pending", 1 item in "completed". 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
  ],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 2 - All success 5- okAct - 2 item in "pending", 2 items in "completed". 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
  ],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 2 - All success 6- okAct. 1 item in "pending", 3 items in "completed" 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
  ],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
    Object {
      "msg": "/index.html uploaded",
      "type": "success",
    },
  ],
  "pending": Array [
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
  ],
  "show": true,
}
`;

exports[`Scenario 2 - All success 7- okAct. 0 item in "pending", 4 items in "completed" 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
  ],
  "failed": Array [],
  "inProgress": true,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
    Object {
      "msg": "/index.html uploaded",
      "type": "success",
    },
    Object {
      "msg": "/style.css uploaded",
      "type": "success",
    },
  ],
  "pending": Array [],
  "show": true,
}
`;

exports[`Scenario 2 - All success 8- finishAct 1`] = `
Object {
  "completed": Array [
    Object {
      "_id": "id2",
      "name": "main.js",
      "path": "",
    },
    Object {
      "_id": "id7",
      "name": "bg.jpg",
      "path": "images/",
    },
    Object {
      "_id": "id4",
      "name": "index.html",
      "path": "",
    },
    Object {
      "_id": "id1",
      "name": "style.css",
      "path": "",
    },
  ],
  "failed": Array [],
  "inProgress": false,
  "log": Array [
    Object {
      "msg": "Upload started",
      "type": "info",
    },
    Object {
      "msg": "/main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "/images/bg.jpg uploaded",
      "type": "success",
    },
    Object {
      "msg": "/index.html uploaded",
      "type": "success",
    },
    Object {
      "msg": "/style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "4 files uploaded 🎉",
      "type": "info",
    },
  ],
  "pending": Array [],
  "show": true,
}
`;

exports[`Scenario 2 - All success 9- resetAct 1`] = `
Object {
  "completed": Array [],
  "failed": Array [],
  "inProgress": false,
  "log": Array [],
  "pending": Array [],
  "show": false,
}
`;
